<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_flipper_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/loading_screen" />

    <androidx.constraintlayout.widget.ConstraintLayout
...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                style="@style/Widget.Material3.SearchBar.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ricerca_hint" />
        </com.google.android.material.appbar.AppBarLayout>

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ricerca_hint"
            app:layout_anchor="@id/appbar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler_view"
                style="@style/Widget.Material3.PopupMenu.ListPopupWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.search.SearchView>

        <ScrollView
...
