...
                    android:id="@+id/three_latest_releases_linlayout_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/first_latest_release_home"
                        android:layout_width="110dp"
                        android:layout_height="165dp"
                        app:shapeAppearanceOverlay="@style/Theme.Filmaccio.SquareCornerRadius" />

                    <View
                        android:layout_width="0dp"
...
